# DigitRecognition

./: README.md
handwritten_digit_recognition/: Cargo.toml
handwritten_digit_recognition/src/: main.rs  recognize.rs
handwritten_digit_recognition/static/: app.js  index.html
