[package]
name = "handwritten_digit_recognition"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15"
onnxruntime = "0.0.14"
onnxruntime-sys = "0.0.14"
ureq = "2.7.0"
image = "0.24"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }