[package]
name = "handwritten_digit_recognition"
version = "0.1.0"
edition = "2021"

[dependencies]
onnxruntime = "0.0.14"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
lazy_static = "1.4"
image = "0.24"
